style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');


body {
    font-family: 'Roboto', sans-serif;
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; 
    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
    outline: none !important;
}
.container {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}
.btns > button {
    border: none;
    border-radius: 10px;
    font-size: 1.5rem;
    background-color: rgb(89, 89, 89);
    color: white;
    box-shadow: 0px 6px 0 4px rgba(79, 79, 79, 0.5);
    cursor: pointer;
    transition: all 0.1s ease-in-out;
}
.btns > button:hover {
    background-color: rgb(111, 111, 111);
}
.btns > button:active {
    transform: translateY(8px);
    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
}
.calculator {
    background-color: rgb(47, 47, 47);
    width: fit-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 15px;
    padding-bottom: 25px;
    border: none;
    border-radius: 15px;
    box-shadow: 0 6px 0 5px rgba(21, 21, 21, 0.8) ;
}
.btns {
    display: grid;
    grid-template-columns: repeat(4, 80px);
    grid-template-rows: repeat(5, 80px);
    gap: 15px;
}
.two-space-all {
    grid-column-start: 1;
    grid-column-end: 3;
}
.two-space {
    grid-column-start: 3;
    grid-column-end: 5;
}
.output {
    background-color: rgb(163, 235, 153);
    box-shadow: 0px 2px 10px 2px rgba(0, 35, 0, 0.6) inset;
    color: rgb(51, 51, 51);
    width: 318px;
    height: 100px;
    display: flex;
    padding: 0 25px;
    flex-direction: column;
    align-items: end;
    justify-content: center;
    margin-bottom: 15px;
    border-radius: 15px;
}
.previousTextNumber {
    margin: 10px;
    font-size: 1.2rem;
    color: rgb(107, 107, 107);
}
.currentTextNumber {
    margin: 10px;
    margin-top: 0;
    font-size: 2.5rem;
}

.btns > .equal {
    background-color: rgb(56, 73, 255);
    box-shadow: 0px 6px 0 4px rgba(56, 73, 255, 0.5);
}
.btns > .equal:hover {
    background-color: rgb(74, 89, 255)
}
.btns > .two-space-all {
    background-color: rgb(255, 56, 56);
    box-shadow: 0px 6px 0 4px rgba(255, 38, 38, 0.5);
}
.btns > .two-space-all:hover {
    background-color: rgb(255, 71, 71);
}

.footer-title {
    color: rgb(47, 47, 47);
}
a {
    color: rgb(47, 47, 47);
}
.fa-github {
    transition: all 0.4s ease-in-out;
}

.fa-github:hover {
    transform: scale(1.5) rotate(360deg);
    margin-left: 5px;
    margin-right: 5px;
}
footer {
    margin-top: 50px;
}
.output {
    font-family: 'Orbitron', sans-serif;
}

